--- a/Dockerfile.rov
+++ b/Dockerfile.rov
@@ -1,5 +1,10 @@
 FROM osrf/ros:melodic-desktop-full
 
+ADD . /root/Dev/Underwater_2021_2022
+#ROV sends over 17002
+EXPOSE 17002
+#ROV receives on 17001
+EXPOSE 17001
 RUN apt-get update && apt-get install -y qt4-default ros-melodic-image-common ros-melodic-cv-bridge
 RUN mkdir -p ~/catkin_ws/src
 RUN /bin/bash -c '. /opt/ros/melodic/setup.bash; cd ~/catkin_ws; catkin_make'
